tests/TOSORT/errors/undefined/undefined.c
// this is a test file for checking: 'Use of an undefined or uninitialized variable.'

int main()
{
    a + 5; // error
}